2003-05-02  Stephen J. Turnbull  <stephen@xemacs.org>

	* cmdloop.el (command-error): Ensure exit msg is on separate line.

2003-05-01  Steve Youngs  <youngs@xemacs.org>

	* package-get.el (package-get-require-signed-base-updates): Force
	default to nil while I sort out some PGP problems.

2003-04-16  Jerry James  <james@xemacs.org>

	* keydefs.el: Remove mappings for keys mapped to the nowhere
	defined function function-key-error.

2003-04-24  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.12 "carrot" is released.

2003-04-24  Steve Youngs  <youngs@xemacs.org>

	* font-lock.el (font-lock-match-java-declarations): Move
	save-restriction, narrow-to-region to beginning of function to
	avoid going beyond the limit and causing an infloop.
	From Jin Choi <jsc@orangeimagineering.com>.

2003-04-24  Vasily Korytov  <deskpot@myrealbox.com>

	* lisp-mode.el (emacs-lisp-mode-hook, lisp-mode-hook,
	lisp-interaction-mode-hook): Add the docstrings.

2003-04-23  Stephen J. Turnbull  <stephen@xemacs.org>

	* subr.el (split-string): Revert to regular behavior, except when
	both separators and omit-nulls are nil.
	(split-string-default-separators): New constant.

2003-04-15  Reiner Steib  <Reiner.Steib@gmx.de>

	* info.el (info): Support `(filename)nodename' as argument.

2003-04-14  Steve Youngs  <youngs@xemacs.org>

	* package-admin.el (package-admin-find-top-directory): Use
	'directory-sep-char'. 
	(package-admin-get-install-dir): Ditto.
	This is so PUI won't break on platforms that don't use '/' as the
	directory separator. 
	
	* package-get.el (package-get-pgp-available-p): New.
	(package-get-require-signed-base-updates): Use it.
	(package-get-update-base-from-buffer): Move the code that finds
	the gpg stuff into `package-get-pgp-available-p'.
	Now if you have Mailcrypt and a PGP binary installed and set up on
	your system, PUI will automatically default to doing PGP
	verification, otherwise it'll default to off.
	(package-get-require-base): Use the DATUM arg to `error'.